Fixed dice hold states in GUI, border too big